[package]
name = "run-info"
version = "0.5.1"
authors = ["Matthias Drescher <matthias_p_drescher@t-online.com>"]
description = "Monitor CPU and memory usage via terminal (Linux only)"
repository = "https://github.com/mpdrescher/run-info"
keywords = ["cpu", "memory", "usage", "monitor", "terminal"]
license = "MIT"
exclude = [
  "run-info.png"
]

[dependencies]
term = "0.4.4"
clap = "2.11.0"
time = "0.1.35"
